# C-data-structures

./: .gitignore  CMakeLists.txt  main.c
basics/: README.md  basics.c  basics.h
datastrucutres/: README.md  intro.md  memory_allocation.md  nodes.c  nodes.h  types_of_datastructures.md
datastrucutres/array/: README.md  array_practice.c  array_practice.h  intro.md
datastrucutres/linked_structs/: nodes.c  nodes.h  singly_linked_list.c  singly_linked_list.h
datastrucutres/trees/: binary_tree.c  binary_tree.h
implementations/: iterators.c  malloc.c  malloc.h  parse_int.c  slice.c  slice.h  test
recursion/: README.md  recursion.md  recursions.c  recursions.h
